# fuel-route-optimizer

./: README.md  db.sqlite3  pyproject.toml
fuel_optimizer/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
fuel_optimizer/management/commands/: geocode_stations.py
fuel_optimizer/migrations/: 0001_initial.py
fuel_optimizer/tests/: steps.py  test_route_optimizer.py
fuel_route_optimizer/: asgi.py  settings.py  urls.py  wsgi.py
